examples/bad/gc_removed.mko
// Must fail: Mako intentionally has no garbage collector API.
fn main() {
    let _ = gc_alloc(16)
}
